Añadidos todos los diagramas de secuencia

--- a/memoria/diagramas/diag_seq.tex
+++ b/memoria/diagramas/diag_seq.tex
@@ -1,2 +1,15 @@
 \input{./diagramas/diag_seq/seq_iniciar_sesion}
 \input{./diagramas/diag_seq/seq_buscar}
+\input{./diagramas/diag_seq/seq_actualizar_estado}
+\input{./diagramas/diag_seq/seq_comprobar_nivel}
+\input{./diagramas/diag_seq/seq_configurar_pizarra} 
+\input{./diagramas/diag_seq/seq_comparar}
+\input{./diagramas/diag_seq/seq_crear_carpeta}
+\input{./diagramas/diag_seq/seq_crear_usuario}
+\input{./diagramas/diag_seq/seq_escribir}
+\input{./diagramas/diag_seq/seq_escribir_lectura}
+\input{./diagramas/diag_seq/seq_gestionar_permisos}
+\input{./diagramas/diag_seq/seq_leer}
+\input{./diagramas/diag_seq/seq_mostrar_estado}
+\input{./diagramas/diag_seq/seq_mostrar_estadisticas}
+\input{./diagramas/diag_seq/seq_mostrar_estadisticas_generales}
