Editado error en diagrama "iniciar_sesion"

--- a/memoria/diagramas/diag_seq/seq_iniciar_sesion.tex
+++ b/memoria/diagramas/diag_seq/seq_iniciar_sesion.tex
@@ -1,11 +1,11 @@
 \newcommand{\seqIniciarSesion}{
 	\begin{tikzpicture}
 	\begin{umlseqdiag}
-		\umlobject{I}
+		\umlobject{L}
 		\umlobject{Agente}
 		\umlobject{Pizarra}
 		\umlobject{Usuario}
-		\begin{umlcall}[op=iniciarSesion(), type=synchron, return=iniciarSesion()]{I}{Agente}
+		\begin{umlcall}[op=iniciarSesion(), type=synchron, return=iniciarSesion()]{L}{Agente}
 			\begin{umlcall}[op=comprobarUsuario(), type=synchron, return=comprobarUsuario()]{Agente}{Pizarra}
 				\begin{umlcall}[op=comprobarUser(), type=synchron, return=comprobarUser()]{Pizarra}{Usuario}
 				\end{umlcall}
