Cambio de color en diagramas de secuencia

--- a/memoria/diagramas/diag_seq/seq_comprobar_nivel.tex
+++ b/memoria/diagramas/diag_seq/seq_comprobar_nivel.tex
@@ -1,5 +1,6 @@
 \newcommand{\seqComprobarNivel}{
 	\begin{tikzpicture}
+	\tikzumlset{fill object=gray!30}
 	\begin{umlseqdiag}
 		\umlobject{Agente}
 		\umlobject{Pizarra}
