--- a/memoria/diagramas/diag_seq/seq_crear_usuario.tex
+++ b/memoria/diagramas/diag_seq/seq_crear_usuario.tex
@@ -1,6 +1,7 @@
 
 \newcommand{\seqCrearUsuario}{
 	\begin{tikzpicture}
+	\tikzumlset{fill object=gray!30}
 	\begin{umlseqdiag}
 	\umlobject{L}
 	\umlobject{Agente}
