--- a/memoria/diagramas/diag_seq/seq_mostrar_estadisticas.tex
+++ b/memoria/diagramas/diag_seq/seq_mostrar_estadisticas.tex
@@ -1,6 +1,7 @@
 
 \newcommand{\seqMostrarEstadisticas}{
 	\begin{tikzpicture}
+	\tikzumlset{fill object=gray!30}
 	\begin{umlseqdiag}
 	\umlobject{L}
 	\umlobject{Agente}
