--- a/memoria/diagramas/diag_seq/seq_actualizar_estado.tex
+++ b/memoria/diagramas/diag_seq/seq_actualizar_estado.tex
@@ -1,5 +1,6 @@
 \newcommand{\seqActualizarEstado}{
 	\begin{tikzpicture}
+	\tikzumlset{fill object=gray!30}
 	\begin{umlseqdiag}
 		\umlobject{Agente}
 		\umlobject{Pizarra}
