--- a/memoria/diagramas/diag_seq/seq_crear_carpeta.tex
+++ b/memoria/diagramas/diag_seq/seq_crear_carpeta.tex
@@ -1,5 +1,6 @@
 \newcommand{\seqCrearCarpeta}{
 	\begin{tikzpicture}
+	\tikzumlset{fill object=gray!30}
 	\begin{umlseqdiag}
 	\umlobject{L}
 	\umlobject{Agente}
