--- a/memoria/diagramas/diag_seq/seq_gestionar_permisos.tex
+++ b/memoria/diagramas/diag_seq/seq_gestionar_permisos.tex
@@ -1,5 +1,6 @@
 \newcommand{\seqGestionarPermisos}{
 	\begin{tikzpicture}
+	\tikzumlset{fill object=gray!30}
 	\begin{umlseqdiag}
 	\umlobject{L}
 	\umlobject{Agente}
