Arreglado diagrama se actividad "iniciar sesion"

--- a/memoria/diagramas/diag_seq/seq_iniciar_sesion.tex
+++ b/memoria/diagramas/diag_seq/seq_iniciar_sesion.tex
@@ -11,6 +11,8 @@
 				\begin{umlcall}[op=comprobarUser(), type=synchron, return=comprobarUser()]{Pizarra}{Usuario}
 				\end{umlcall}
 			\end{umlcall}
+			\begin{umlcall}[op=comprobarPermisos(), type=synchron, return=comprobarPermisos()]{Agente}{Pizarra}
+			\end{umlcall}
 		\end{umlcall}
 	\end{umlseqdiag}
 	\end{tikzpicture}
