Subidos diagramas de secuencia en la memoria

--- a/memoria/diagramas/diag_seq/seq_comprobar_nivel.tex
+++ b/memoria/diagramas/diag_seq/seq_comprobar_nivel.tex
@@ -1,6 +1,6 @@
 \newcommand{\seqComprobarNivel}{
 	\begin{tikzpicture}
-	\tikzumlset{fill object=gray!30}
+\tikzumlset{fill object=gray!30,font =\tiny}
 	\begin{umlseqdiag}
 		\umlobject{Agente}
 		\umlobject{Pizarra}
