--- a/memoria/diagramas/diag_seq/seq_crear_carpeta.tex
+++ b/memoria/diagramas/diag_seq/seq_crear_carpeta.tex
@@ -1,6 +1,6 @@
 \newcommand{\seqCrearCarpeta}{
-	\begin{tikzpicture}
-	\tikzumlset{fill object=gray!30}
+	\begin{tikzpicture}[scale=0.8]
+	\tikzumlset{fill object=gray!30,font =\tiny}
 	\begin{umlseqdiag}
 	\umlobject{L}
 	\umlobject{Agente}
