--- a/memoria/diagramas/diag_seq/seq_actualizar_estado.tex
+++ b/memoria/diagramas/diag_seq/seq_actualizar_estado.tex
@@ -1,6 +1,6 @@
 \newcommand{\seqActualizarEstado}{
 	\begin{tikzpicture}
-	\tikzumlset{fill object=gray!30}
+	\tikzumlset{fill object=gray!30,font =\tiny}
 	\begin{umlseqdiag}
 		\umlobject{Agente}
 		\umlobject{Pizarra}
