--- a/memoria/diagramas/diag_seq/seq_comparar.tex
+++ b/memoria/diagramas/diag_seq/seq_comparar.tex
@@ -1,6 +1,6 @@
 \newcommand{\seqComparar}{
-	\begin{tikzpicture}
-	\tikzumlset{fill object=gray!30}
+	\begin{tikzpicture}[scale=0.8]
+\tikzumlset{fill object=gray!30,font =\tiny}
 	\begin{umlseqdiag}
 	\umlobject{L}
 	\umlobject{Agente}
