--- a/memoria/diagramas/diag_seq/seq_iniciar_sesion.tex
+++ b/memoria/diagramas/diag_seq/seq_iniciar_sesion.tex
@@ -1,6 +1,6 @@
 \newcommand{\seqIniciarSesion}{
 	\begin{tikzpicture}
-	\tikzumlset{fill object=gray!30}
+\tikzumlset{fill object=gray!30,font =\tiny}
 	\begin{umlseqdiag}
 		\umlobject{L}
 		\umlobject{Agente}
